...
                  button: true,
                  label: '18歳以上です。続行する',
                  child: SizedBox(
                    height: _minButtonHeight,
                    child: FilledButton(
                      onPressed: () => Navigator.of(context).pop(true),
                      child: const Text('I am 18 or older'),
                    ),
                  ),
                ),
              ],
            ),
          ),
...
