...
                    crossAxisAlignment: CrossAxisAlignment.stretch,
                    children: [
                      SizedBox(
                        height: minHeight,
                        child: FilledButton(
                          onPressed: () async => await _acceptAll(),
                          child: const Text('Accept all'),
                        ),
                      ),
                      const SizedBox(height: 8),
                      SizedBox(
                        height: minHeight,
                        child: OutlinedButton(
...
